--- a/google/index.css
+++ b/google/index.css
@@ -111,3 +111,33 @@ html, body {
 
 .border-top { border-top: 1px solid #e5e5e5; }
 .border-bottom { border-bottom: 1px solid #e5e5e5; }
+
+.boxHeader {
+  padding: 0 16px;
+  width: 100%;
+  background-color: #3399cc;
+  margin: 0px 10px;
+}
+
+.boxHeader h6 {
+  margin-bottom: 0;
+  padding:10px;
+  color:#fff;
+  font-weight: bold;
+}
+
+.boxHeader h6:hover {
+  cursor: pointer
+}
+
+.card {
+  -webkit-border-radius: 1px;
+  -webkit-border-bottom-right-radius: .25rem;
+  -webkit-border-bottom-left-radius: .25rem;
+  -moz-border-radius: 1px;
+  -moz-border-radius-bottomright: .25rem;
+  -moz-border-radius-bottomleft: .25rem;
+  border-radius: 1px;
+  border-bottom-right-radius: .25rem;
+  border-bottom-left-radius: .25rem;
+}
