--- a/google/index.css
+++ b/google/index.css
@@ -146,6 +146,10 @@ html, body {
   max-width: 800px !important;
 }
 
+#macSearch .modal-dialog {
+  max-width: 600px !important;
+}
+
 .modal-button {
   margin: 0 20px;
 }
